tests/neg/i15568.scala
trait Foo[X >: Int <: String]

type Bar = Foo[? >: Int <: String] // error
