tests/neg/i15568.check
-- [E057] Type Mismatch Error: tests/neg/i15568.scala:3:15 -------------------------------------------------------------
3 |type Bar = Foo[? >: Int <: String] // error
  |               ^
  |               Type argument  >: Int <: String does not overlap with upper bound String
